src/test/deca/context/valid/custom/if/if_unknown_float_decl.deca
// Description:
//   Test if on a variable of type float that has not been declared.
// Results:
//    Line 11: Error, the variable is not initialised.
//
// History:
//    created on 12/01/2022

{
   float i;
   if (i == 1.1) {
        println("Error, the variable is not initialised");
   } else {
        println("Error, the variable is not initialised");
   }
}
