src/test/deca/context/invalid/custom/if_unknown_type.deca
// Description:
//   Test if on a variable that has an unknown type.
// Results:
//    Line 10: Error, the variable type is unknown.
//
// History:
//    created on 12/01/2022

{
   unknownTypr i = 1;
   if (i == 1) {
        println("Error, the variable is unknown");
   } else {
        println("Error, the variable is unknown");
   }
}
